--- a/SloRadio/Info.plist
+++ b/SloRadio/Info.plist
@@ -20,6 +20,20 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>11</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>e79d8b64e8c46d2eab455beddb7a7d9fd8a343ad</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
