Link MobileVLCKit as a framework instead of a static lib

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-Libraries/MobileVLCKit/include/
-Libraries/MobileVLCKit/libMobileVLCKit.a
+Libraries/MobileVLCKit.framework
 SloRadio.xcodeproj/project.xcworkspace/xcuserdata/
 SloRadio.xcodeproj/xcuserdata/
